# literm

./: .gitignore  CHANGES.md  LICENSE  Makefile  README.md
client/: README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
client/src/: App.svelte  app.css
client/src/components/: KeyboardManager.svelte  ShortcutRecorder.svelte
client/src/components/auth/: LoginModal.svelte
client/src/components/layout/: LayoutRenderer.svelte  LayoutsModal.svelte  Pane.svelte
client/src/components/panes/: FileExplorerPane.svelte  Hdf5Viewer.svelte  PreviewPane.svelte  TerminalPane.svelte
client/src/components/settings/: SettingsModal.svelte
client/src/lib/: templates.ts  types.ts
client/src/stores/: authStore.ts  fileStore.ts  layoutStore.ts  settingsStore.ts  terminalRegistry.ts  terminalStore.ts
docs/: API.md  CONTRIBUTING.md  DEPLOYMENT.md  TROUBLESHOOTING.md  design_spec.md
server/: Cargo.toml  README.md
server/config/: config.toml
server/data/: README.md  sample-code.js  test.txt
server/data/documents/: note.txt
server/src/: config.rs  error.rs  fs.rs  main.rs  pty.rs  session.rs  state.rs
server/src/http/: fs.rs  hdf5.rs  login.rs  mod.rs
server/src/ws/: mod.rs  system.rs  terminal.rs
