[package]
name = "literm_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "json", "ws"] }
tokio = { version = "1.38", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1"
futures = "0.3"
argon2 = { version = "0.5", features = ["password-hash"] }
portable-pty = "0.8"
tokio-util = { version = "0.7", features = ["io"] }
mime_guess = "2"
notify = "6"
